--- a/resources/views/Item/Components/SingleItem/SingleItem_Details.twig
+++ b/resources/views/Item/Components/SingleItem/SingleItem_Details.twig
@@ -125,6 +125,10 @@
     <span :content="currentVariation.prices.default.currency"></span>
 </span>
 
+<span class="vat">
+    * {% if services.customer.showNetPrices() %}{{ trans("Ceres::Template.singleItemExclVAT") }}{% else %}{{ trans("Ceres::Template.singleItemInclVAT") }}{% endif %} {{ trans("Ceres::Template.singleItemExclusive") }}
+    <a {% if ceresConfig.global.shippingCostsCategoryId > 0 %} data-toggle="modal" href="#shippingscosts"{% endif %} title="{{ trans("Ceres::Template.singleItemShippingCosts") }}">{{ trans("Ceres::Template.singleItemShippingCosts") }}</a>
+</span>
 <div class="base-price my-3" v-if="currentVariation.unit">
     <div v-if="currentVariation.variation.mayShowUnitPrice">
         {{ trans("Ceres::Template.singleItemUnitPrice") }}
@@ -177,10 +181,5 @@
 <slot name="additional-content-after-add-to-basket"></slot>
 
 <hr>
-
-<span class="vat small text-muted">
-                        * {% if services.customer.showNetPrices() %}{{ trans("Ceres::Template.singleItemExclVAT") }}{% else %}{{ trans("Ceres::Template.singleItemInclVAT") }}{% endif %} {{ trans("Ceres::Template.singleItemExclusive") }}
-    <a {% if ceresConfig.global.shippingCostsCategoryId > 0 %} data-toggle="modal" href="#shippingscosts"{% endif %} title="{{ trans("Ceres::Template.singleItemShippingCosts") }}">{{ trans("Ceres::Template.singleItemShippingCosts") }}</a>
-                    </span>
 
 <slot name="additional-content-after-vat"></slot>
