change layout listing  page - 04.11.2019-15

--- a/resources/views/ItemList/Components/CategoryItem.twig
+++ b/resources/views/ItemList/Components/CategoryItem.twig
@@ -88,10 +88,8 @@
                     {{ AddToBasket.printVueComponent( "item", false, false, { ":has-price": "item | hasItemDefaultPrice" } ) }}
 
                     <span class="vat small text-muted">
-                        * <span v-if="showNetPrices">{{ trans("Ceres::Template.itemExclVAT") }}</span>
-                        <span v-else>{{ trans("Ceres::Template.itemInclVAT") }}</span>
-                        {{ trans("Ceres::Template.itemExclusive") }}
-                        <a {% if ceresConfig.global.shippingCostsCategoryId > 0 %} data-toggle="modal" href="#shippingscosts"{% endif %} title="{{ trans("Ceres::Template.itemShippingCosts") }}">{{ trans("Ceres::Template.itemShippingCosts") }}</a>
+                        <span v-if="item.texts.lang === 'en'">Availabke: ${ item.stock.net }</span>
+                        <span v-if="item.texts.lang === 'de'">Erhältlich: ${ item.stock.net }</span>
                     </span>
                 </div>
             </slot>
