--- a/resources/views/Item/Components/SingleItem/SingleItem_Details.twig
+++ b/resources/views/Item/Components/SingleItem/SingleItem_Details.twig
@@ -111,8 +111,8 @@
     </div>
     {% if item.documents[0].data.prices.rrp and item.documents[0].data.prices.rrp.data.basePrice > 0 and item.documents[0].data.prices.rrp.data.basePrice > item.documents[0].data.prices.default.unitPrice.value %}
         <div class="discount">
-            {% set discountNew = 100 - ((item.data.prices.default.price.value * 100) / item.data.prices.rrp.data.basePrice) %}
-            {% if item.data.texts.lang == 'en' %}Discount:{% endif %}{% if item.data.texts.lang == 'de' %}Ersparnis:{% endif %} {{ discountNew|round }}%
+            {% set discountNew = 100 - ((item.documents[0].data.prices.default.price.value * 100) / item.documents[0].data.prices.rrp.data.basePrice) %}
+            {% if item.documents[0].data.texts.lang == 'en' %}Discount:{% endif %}{% if item.documents[0].data.texts.lang == 'de' %}Ersparnis:{% endif %} {{ discountNew|round }}%
         </div>
     {% endif %}
 {% endif %}
