--- a/resources/views/ItemList/Components/CategoryItem.twig
+++ b/resources/views/ItemList/Components/CategoryItem.twig
@@ -14,7 +14,7 @@
 
 <script type="x/template" id="vue-category-item">
     <article class="cmp cmp-product-thumb cmp-product-thumb--grid">
-        <div class="thumb-inner" :class="paddingClasses" :style="paddingInlineStyles"> {{ item | json_encode }}
+        <div class="thumb-inner" :class="paddingClasses" :style="paddingInlineStyles"> {{ item }}
 
             {{ AddToBasket.printVueComponent( "item", true, false, { ":has-price": "item | hasItemDefaultPrice" } ) }}
 
