--- a/resources/views/Category/Item/CategoryItem.twig
+++ b/resources/views/Category/Item/CategoryItem.twig
@@ -95,7 +95,9 @@
 	                    {% for item in itemList %}
                             {% set discountNew = 100 - ((item.data.prices.default.price.value * 100) / item.data.prices.rrp.data.basePrice) %}
 	                        <li class="col-12  col-sm-6 col-md-4 col-lg-{% if category is defined and ceresConfig.header.showNavBars in ["side", "both"] %}4{% else %}3{% endif %}">
-                                <div class="discount-list small text-muted">{% if item.data.texts.lang == 'en' %}Discount:{% endif %}{% if item.data.texts.lang == 'de' %}Ersparnis:{% endif %} {{ discountNew|round }}%</div>
+                                {% if item.data.prices.rrp and item.data.prices.rrp.data.basePrice > 0 and item.data.prices.rrp.data.basePrice > item.data.prices.default.unitPrice.value %}
+                                    <div class="discount-list small text-muted">{% if item.data.texts.lang == 'en' %}Discount:{% endif %}{% if item.data.texts.lang == 'de' %}Ersparnis:{% endif %} {{ discountNew|round }}%</div>
+                                {% endif %}
                                 <category-item
 	                                item-data-ref="{{ item.data | json_data }}"
 	                                :decimal-count="{{ ceresConfig.item.storeSpecial }}">
