--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -174,6 +174,7 @@ nav.navbar:not(.megamenu) .nav-dropdown-inner li:hover {
 
 .crossprice .rrp {
     font-size: 1.8rem;
+    line-height: 1;
 }
 
 .single .price {
