--- a/resources/views/Item/Components/SingleItem/SingleItem_Details.twig
+++ b/resources/views/Item/Components/SingleItem/SingleItem_Details.twig
@@ -72,7 +72,7 @@
             <span>${ currentVariation.unit.names.name }</span>
         </div>
         <div class="col-xs-6 col-md-5">
-            <b>{% if item.documents[0].data.texts.lang == 'en' %}Stock{% endif %}{% if item.documents[0].data.texts.lang == 'de' %}Bestand{% endif %}: </b>
+            <b>{% if item.documents[0].data.texts.lang == 'en' %}Stock{% endif %}{% if item.documents[0].data.texts.lang == 'de' %}Verfügbar{% endif %}: </b>
         </div>
         <div class="col-xs-6 col-md-7">
             <span>${ currentVariation.stock.net }</span>
@@ -106,7 +106,7 @@
     {% if item.documents[0].data.prices.rrp and item.documents[0].data.prices.rrp.data.basePrice > 0 and item.documents[0].data.prices.rrp.data.basePrice > item.documents[0].data.prices.default.unitPrice.value %}
         <div class="discount">
             {% set discountNew = 100 - ((item.documents[0].data.prices.default.price.value * 100) / item.documents[0].data.prices.rrp.data.basePrice) %}
-            {% if item.documents[0].data.texts.lang == 'en' %}Discount:{% endif %}{% if item.documents[0].data.texts.lang == 'de' %}Ersparnis:{% endif %} {{ discountNew|round }}%
+            {% if item.documents[0].data.texts.lang == 'en' %}Discount:{% endif %}{% if item.documents[0].data.texts.lang == 'de' %}Rabatt:{% endif %} {{ discountNew|round }}%
         </div>
     {% endif %}
 {% endif %}
@@ -114,8 +114,7 @@
 <span class="price h1">
     <span :content="currentVariation.prices.default.price.value">
         ${ variationTotalPrice | currency(currentVariation.prices.default.currency) }
-    </span>
-    <sup>*</sup>
+    </span><sup>*</sup>
     <span :content="currentVariation.prices.default.currency"></span>
 </span>
 
