--- a/resources/views/Item/Components/SingleItem/SingleItem_Details.twig
+++ b/resources/views/Item/Components/SingleItem/SingleItem_Details.twig
@@ -113,9 +113,8 @@
 
 <span class="price h1">
     <span :content="currentVariation.prices.default.price.value">
-        ${ variationTotalPrice | currency(currentVariation.prices.default.currency) }
-    </span><sup>*</sup>
-    <span :content="currentVariation.prices.default.currency"></span>
+        ${ variationTotalPrice | currency(currentVariation.prices.default.currency) }</span><sup>*</sup>
+        <span :content="currentVariation.prices.default.currency"></span>
 </span>
 
 <div class="base-price my-3" v-if="currentVariation.unit">
