update product view 05112019-04

--- a/resources/views/Item/Components/SingleItem/SingleItem_Details.twig
+++ b/resources/views/Item/Components/SingleItem/SingleItem_Details.twig
@@ -10,7 +10,7 @@
 
 <hr>
 
-<div class="mb-5">
+<div class="mb-5 custom-properties">
     <div class="row articlenumber custom-box">
         <div class="col-xs-6 col-md-5">
             <b>{{ trans("Ceres::Template.singleItemNumber") }}: </b>
