--- a/resources/views/ItemList/Components/CategoryItem.twig
+++ b/resources/views/ItemList/Components/CategoryItem.twig
@@ -72,7 +72,7 @@
                             </div>
 
                             <div class="price">
-                                ${ item.prices.default.unitPrice.formatted | specialOffer(item.prices, "unitPrice", "formatted") } *
+                                ${ item.prices.default.unitPrice.formatted | specialOffer(item.prices, "unitPrice", "formatted") }*
                             </div>
                         </div>
                     </div>
@@ -89,7 +89,7 @@
 
                     <span class="vat small text-muted">
                         <span v-if="item.texts.lang === 'en'">Available: ${ item.stock.net }</span>
-                        <span v-if="item.texts.lang === 'de'">Erhältlich: ${ item.stock.net }</span>
+                        <span v-if="item.texts.lang === 'de'">Verfügbar: ${ item.stock.net }</span>
                     </span>
 
 
