update product view 05112019-07

--- a/resources/views/Item/Components/SingleItem/SingleItem_Details.twig
+++ b/resources/views/Item/Components/SingleItem/SingleItem_Details.twig
@@ -139,7 +139,7 @@
         <slot name="before-add-to-basket"></slot>
     </div>
 
-    <div class="col-12 col-sm-7 col-md-12 col-lg-8 my-3">
+    <div class="col-12 col-sm-7 col-md-12 col-lg-8 my-3 custom-button-price">
         {{ AddToBasket.printVueComponent(
             "currentVariation",
             false,
