--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -206,6 +206,10 @@ h1.price {
     margin-bottom: 1rem !important;
 }
 
+
+.custom-button-price {
+    margin-top: 1.8rem !important;
+}
 @media (min-width: 992px) {
     #mainNavbarCollapsable ul.mainmenu>li>ul {
         background-color: #ffffff;
