update product view 05112019-08

--- a/resources/views/ItemList/Components/CategoryItem.twig
+++ b/resources/views/ItemList/Components/CategoryItem.twig
@@ -72,7 +72,7 @@
                             </div>
 
                             <div class="price">
-                                ${ item.prices.default.unitPrice.formatted | specialOffer(item.prices, "unitPrice", "formatted") }*
+                                ${ item.prices.default.unitPrice.formatted | currency(item.prices.default.currency) }*
                             </div>
                         </div>
                     </div>
