--- a/resources/views/ItemList/Components/CategoryItem.twig
+++ b/resources/views/ItemList/Components/CategoryItem.twig
@@ -72,7 +72,7 @@
                             </div>
 
                             <div class="price">
-                                ${ item.prices.default.unitPrice.formatted | currency(item.prices.default.currency) }*
+                                ${ item.prices.default.unitPrice.value | currency(item.prices.default.currency) }*
                             </div>
                         </div>
                     </div>
