--- a/resources/views/PageDesign/Partials/Header/DefaultHeader.twig
+++ b/resources/views/PageDesign/Partials/Header/DefaultHeader.twig
@@ -81,8 +81,7 @@
                 </ul>
             </div>
         </div>
-        {% set userObject = services.customer.getContact() %}
-        {% if userObject %}
+        {% if userObjectForTemplate %}
             {% include "Ceres::PageDesign.Partials.Header.Navigation" %}
         {% endif %}
     </div>
