--- a/resources/views/PageDesign/Partials/Header/DefaultHeader.twig
+++ b/resources/views/PageDesign/Partials/Header/DefaultHeader.twig
@@ -27,57 +27,58 @@
                             <i class="flag-icon flag-icon-{{ lang }}"></i>
                         </a>
                     </li>
-
-                    {% if enableCurrencySelect == "true" %}
-                        <li class="list-inline-item dropdown control-languages">
-                            <a class=""
-                               data-toggle="collapse"
-                               href="#currencySelect"
-                               aria-expanded="false"
-                               aria-controls="currencySelect"
-                               data-parent="#controlsList">
-                                <span>{{ services.checkout.getCurrencyData()[currencyFormat] }}</span>
+                    {% if userObjectForTemplate %}
+                        {% if enableCurrencySelect == "true" %}
+                            <li class="list-inline-item dropdown control-languages">
+                                <a class=""
+                                data-toggle="collapse"
+                                href="#currencySelect"
+                                aria-expanded="false"
+                                aria-controls="currencySelect"
+                                data-parent="#controlsList">
+                                    <span>{{ services.checkout.getCurrencyData()[currencyFormat] }}</span>
+                                </a>
+                            </li>
+                        {% endif %}
+                        <li class="list-inline-item control-search">
+                            <a class="anicon anicon-search-xcross"
+                            aria-label="toggle search"
+                            data-toggle="collapse"
+                            href="#searchBox"
+                            aria-expanded="false"
+                            aria-controls="searchBox"
+                            data-parent="#controlsList">
+                                <span class="anicon-search-item" aria-hidden="true"></span>
                             </a>
                         </li>
-                    {% endif %}
-                    <li class="list-inline-item control-search">
-                        <a class="anicon anicon-search-xcross"
-                           aria-label="toggle search"
-                           data-toggle="collapse"
-                           href="#searchBox"
-                           aria-expanded="false"
-                           aria-controls="searchBox"
-                           data-parent="#controlsList">
-                            <span class="anicon-search-item" aria-hidden="true"></span>
-                        </a>
-                    </li>
-                    {% if "wish-list" in enabledRoutes or "all" in enabledRoutes %}
-                        <li class="list-inline-item control-wish-list">
-                            <wish-list-count>
-                                <a>
-                                    <span class="badge-right">0</span>
-                                    <i class="fa fa-heart-o" aria-hidden="true"></i>
-                                </a>
-                            </wish-list-count>
+                        {% if "wish-list" in enabledRoutes or "all" in enabledRoutes %}
+                            <li class="list-inline-item control-wish-list">
+                                <wish-list-count>
+                                    <a>
+                                        <span class="badge-right">0</span>
+                                        <i class="fa fa-heart-o" aria-hidden="true"></i>
+                                    </a>
+                                </wish-list-count>
+                            </li>
+                        {% endif %}
+                        <li class="list-inline-item control-basket">
+                            <a v-toggle-basket-preview href="#" class="toggle-basket-preview">
+                                {% if config("Ceres.header.basket_values") != "sum" %}
+                                    <span class="badge-right" v-basket-item-quantity="$store.state.basket.data.itemQuantity">0</span>
+                                {% endif %}
+
+                                <i v-waiting-animation="$store.state.basket.isBasketLoading" waiting-class="fa fa-refresh fa-spin" class="fa fa-shopping-cart" aria-hidden="true"></i>
+                                {% if config("Ceres.header.basket_values") != "quantity" %}
+                                    <span class="badge" v-if="!$store.state.basket.showNetPrices" v-basket-item-sum="$store.state.basket.data.itemSum">0,00 {{ services.checkout.getCurrencyData()[currencyFormat] }}</span>
+                                    <span class="badge" v-else v-cloak v-basket-item-sum="$store.state.basket.data.itemSumNet">0,00 {{ services.checkout.getCurrencyData()[currencyFormat] }}</span>
+                                {% endif %}
+                            </a>
+
+                            {% if config("Ceres.basket.preview_type") != "right" %}
+                                <basket-preview template="#vue-basket-preview-hover" :show-net-prices="{{ showNetPrices | json_encode }}"></basket-preview>
+                            {% endif %}
                         </li>
                     {% endif %}
-                    <li class="list-inline-item control-basket">
-                        <a v-toggle-basket-preview href="#" class="toggle-basket-preview">
-                            {% if config("Ceres.header.basket_values") != "sum" %}
-                                <span class="badge-right" v-basket-item-quantity="$store.state.basket.data.itemQuantity">0</span>
-                            {% endif %}
-
-                            <i v-waiting-animation="$store.state.basket.isBasketLoading" waiting-class="fa fa-refresh fa-spin" class="fa fa-shopping-cart" aria-hidden="true"></i>
-                            {% if config("Ceres.header.basket_values") != "quantity" %}
-                                <span class="badge" v-if="!$store.state.basket.showNetPrices" v-basket-item-sum="$store.state.basket.data.itemSum">0,00 {{ services.checkout.getCurrencyData()[currencyFormat] }}</span>
-                                <span class="badge" v-else v-cloak v-basket-item-sum="$store.state.basket.data.itemSumNet">0,00 {{ services.checkout.getCurrencyData()[currencyFormat] }}</span>
-                            {% endif %}
-                        </a>
-
-                        {% if config("Ceres.basket.preview_type") != "right" %}
-                            <basket-preview template="#vue-basket-preview-hover" :show-net-prices="{{ showNetPrices | json_encode }}"></basket-preview>
-                        {% endif %}
-                    </li>
                 </ul>
             </div>
         </div>
