--- a/resources/views/PageDesign/Partials/Homepage.twig
+++ b/resources/views/PageDesign/Partials/Homepage.twig
@@ -1,1 +1,1 @@
-<div class="page-background" style="background-image: url(/resources/views/PageDesign/Partials/5a8fa156-d32e-4207-bf36-36e78e7f25b4.png); background-size: cover; background-attachment: fixed; background-repeat: no-repeat;">cccccc</div>
+<div class="page-background">cccccc</div>
