--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -206,10 +206,26 @@ h1.price {
     margin-bottom: 1rem !important;
 }
 
-
 .custom-button-price {
     margin-top: 1.8rem !important;
 }
+
+.page-background {
+    background-image: url(https://cdn03.plentymarkets.com/7dqbnxov24tf/frontend/5a8fa156-d32e-4207-bf36-36e78e7f25b4.png);
+    background-size: cover;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    background-position: center top;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    display: table;
+}
+
 @media (min-width: 992px) {
     #mainNavbarCollapsable ul.mainmenu>li>ul {
         background-color: #ffffff;
