--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -211,11 +211,11 @@ h1.price {
 }
 
 .page-background {
-    background-image: url(https://cdn03.plentymarkets.com/7dqbnxov24tf/frontend/5a8fa156-d32e-4207-bf36-36e78e7f25b4.png);
+    background-image: url(https://cdn03.plentymarkets.com/7dqbnxov24tf/frontend/screener-bg-small.jpg);
     background-size: cover;
     background-attachment: fixed;
     background-repeat: no-repeat;
-    position: fixed;
+    position: relative;
     width: 100%;
     height: 100vh;
     background-position: center top;
