--- a/resources/views/PageDesign/Partials/Homepage.twig
+++ b/resources/views/PageDesign/Partials/Homepage.twig
@@ -1,1 +1,7 @@
-<div class="page-background">cccccc</div>
+<div class="page-background">
+    <div class="placeholder-new">
+        <div class="strap">
+            {{ lang }}
+        </div>
+    </div>
+</div>
