--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -239,6 +239,26 @@ h1.price {
     background-color: rgba(255, 255, 255, 0.7);
 }
 
+.container-fluid {
+    margin-right: auto;
+    margin-left: auto;
+    padding-left: 25px;
+    padding-right: 25px;
+}
+
+.quick-nav-new {
+    list-style: none;
+    margin: 0 0 0 0;
+    padding: 0 0 0 0;
+}
+
+.first-desc-li {
+    line-height: 14px;
+    word-wrap: break-word;
+    white-space: normal;
+    max-width: 400px;
+}
+
 @media (min-width: 992px) {
     #mainNavbarCollapsable ul.mainmenu>li>ul {
         background-color: #ffffff;
