--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -252,7 +252,11 @@ h1.price {
     padding: 0 0 0 0;
 }
 
+.quick-nav-new li {
+    display: inline-block;
+}
 .first-desc-li {
+    padding: 10px;
     line-height: 14px;
     word-wrap: break-word;
     white-space: normal;
