--- a/resources/views/PageDesign/Partials/Homepage.twig
+++ b/resources/views/PageDesign/Partials/Homepage.twig
@@ -13,13 +13,13 @@
                                 {% endif %}
                             </li>
                             <li>
-                                <a data-toggle="modal">
-                                <i class="mr-1 fa fa-user" aria-hidden="true"></i>
-                                <span class="hidden-xs-down">{{ trans("Ceres::Template.login") }}</span>
+                                <a data-toggle="modal" href="#login">
+                                    <i class="mr-1 fa fa-user" aria-hidden="true"></i>
+                                    <span class="hidden-xs-down">{{ trans("Ceres::Template.login") }}</span>
                                 </a>
                             </li>
                             <li>
-                                <a data-toggle="modal">
+                                <a data-toggle="modal" href="#registration">
                                     <i class="mr-1 fa fa-user-plus" aria-hidden="true"></i>
                                     <span class="hidden-xs-down">{{ trans("Ceres::Template.loginRegister") }}</span>
                                 </a>
