--- a/resources/views/PageDesign/Partials/Homepage.twig
+++ b/resources/views/PageDesign/Partials/Homepage.twig
@@ -29,5 +29,16 @@
                 </div>
             </div>
         </div>
+        <div class="imprint">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                        <span>
+                            Blue-Berry GmbH, Schlossberg 2, 83435 Bad Reichenhall, Commercial register: HRB 27197, Register court: Amtsgericht Traunstein, Director: Mirko Gutermuth, VAT identification: DE319894643
+                        </span>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
