--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -268,6 +268,15 @@ h1.price {
     padding: 10px 20px
 }
 
+.page-background .placeholder-new .imprint {
+    background-color: rgba(255, 255, 255, 1);
+    padding: 10px 0;
+    font-size: 11px;
+    line-height: normal;
+    color: #132479;
+    text-align: right;
+}
+
 @media (min-width: 992px) {
     #mainNavbarCollapsable ul.mainmenu>li>ul {
         background-color: #ffffff;
