--- a/resources/views/PageDesign/PageDesign.twig
+++ b/resources/views/PageDesign/PageDesign.twig
@@ -73,11 +73,13 @@
         {% include getPartial('header') %}
 
         <div id="page-body" class="main {% if userObjectForTemplate %}user-logged{% else %}user-not-logged{% endif %}">
-
+            {% if userObjectForTemplate %}
                 {% block PageBody %}
                     <!-- inject content of inherited templates here -->
                 {% endblock %}
-
+            {% else %}
+                {% include "BlueBerry::PageDesign.Partials.Homepage" %}
+            {% endif %}
         </div>
 
         {% if userObjectForTemplate %}
