--- a/resources/views/PageDesign/Partials/Header/DefaultHeader.twig
+++ b/resources/views/PageDesign/Partials/Header/DefaultHeader.twig
@@ -27,7 +27,7 @@
                             <i class="flag-icon flag-icon-{{ lang }}"></i>
                         </a>
                     </li>
-                    {% if userObjectForTemplate %}
+                    {% if userObjectForTemplate.classId == 4 or userObjectForTemplate.classId == 5 %}
                         {% if enableCurrencySelect == "true" %}
                             <li class="list-inline-item dropdown control-languages">
                                 <a class=""
