--- a/resources/views/PageDesign/Partials/Homepage.twig
+++ b/resources/views/PageDesign/Partials/Homepage.twig
@@ -12,6 +12,8 @@
                                     Our offers are adressed to merchants only. If you don't have an account with us yet, please register with your full company data. We will unlock your account after the proof of the details and inform you via eMail.
                                 {% endif %}
                             </li>
+                            {% if userObjectForTemplate %}
+                            {% else %}
                             <li class="other-desc-li">
                                 <a data-toggle="modal" href="#login">
                                     <i class="mr-1 fa fa-user" aria-hidden="true"></i>
@@ -24,6 +26,7 @@
                                     <span class="hidden-xs-down">{{ trans("Ceres::Template.loginRegister") }}</span>
                                 </a>
                             </li>
+                            {% endIf %}
                         </ul>
                     </div>
                 </div>
