--- a/resources/views/PageDesign/Partials/Homepage.twig
+++ b/resources/views/PageDesign/Partials/Homepage.twig
@@ -26,7 +26,7 @@
                                     <span class="hidden-xs-down">{{ trans("Ceres::Template.loginRegister") }}</span>
                                 </a>
                             </li>
-                            {% endIf %}
+                            {% endif %}
                         </ul>
                     </div>
                 </div>
