--- a/resources/views/PageDesign/Partials/Homepage.twig
+++ b/resources/views/PageDesign/Partials/Homepage.twig
@@ -26,6 +26,11 @@
                                     <span class="hidden-xs-down">{{ trans("Ceres::Template.loginRegister") }}</span>
                                 </a>
                             </li>
+                            <li class="other-desc-li">
+                                <a data-toggle="modal" href="#resetPwd">
+                                    <span>{{ trans("Ceres::Template.loginForgotPassword") }}</span>
+                                </a>
+                            </li>
                             {% endif %}
                         </ul>
                     </div>
